# gpt4free-tui-cli

./: .gitignore  README.md  pyproject.toml
cli/: app.py
docs/diagrams /: use_case.drawio
src/: cli.py
src/core/: config.py  database.py  engine.py
src/g4f_app/adapters/: llm_g4f.py
src/g4f_app/domain/: models.py  ports.py  services.py
src/g4f_app/entrypoints/cli/: app.py
src/g4f_app/entrypoints/cli/tui/: tui_textual.py
src/g4f_app/entrypoints/tui/: tui_textual.py
src/g4f_app/entrypoints/tui/styles/: tui_styles.tcss
src/interface/: tui_textual.py
src/interface/styles/: tui_styles.tcss
src/tui/: app.py
src/tui/screens/: chat.py
src/tui/styles/: app_style.tcss
src/tui/widgets/: bot_loading.py  bot_message.py  chat_input.py  chat_item.py  chat_log.py  chats_sidebar.py  choose_panel.py  header.py  user_message.py
tests/: test_services.py
