[project]
name = "gpt4free-tui-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "g4f>=7.6.6",
    "rich>=15.0.0",
    "textual>=8.2.7",
    "typer>=0.26.7",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.19",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
